# sthali-db

./: .gitignore  404.html  README.md  file.txt  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  sthali_core
.build/: pyproject.toml
.dependencies/: requirements-dev.txt  requirements.txt
.github/workflows/: build-upload-pypi.yml  deploy.yml  docs.yml  release.yml  test-package.yml  tests.yml  trigger-deploy.yml  trigger-tests.yml
api/class_DB/: index.html
api/class_DBSpecification/: index.html
api/class_FieldSpecification/: index.html
api/class_Models/: index.html
api/class_PaginateParameters/: index.html
api/class_Types/: index.html
docs/: index.md  mkdocs.yml
docs/docs/: index.md  installation.md  release-notes.md  requirements.md  usage.md
docs/docs/api/: DBSpecification.md  FieldSpecification.md  PaginateParameters.md  class_DB.md  class_DBSpecification.md  class_FieldSpecification.md  class_Models.md  class_PaginateParameters.md  class_Types.md  db.md  db_specification.md  dependencies.md  field_specification.md  function_filter_parameters.md  models.md  module_dependencies.md  module_models.md  paginate_parameters.md
installation/: index.html
license/: index.html
requirements/: index.html
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
src/sthali_db/: __init__.py  db.py  dependencies.py  models.py  types.py
src/sthali_db/clients/: __init__.py  default.py  postgres.py  redis.py  sqlite.py  tinydb.py
src/sthali_db/engines/: __init__.py  base.py  default.py  postgres.py  redis.py  sqlite.py  tinydb.py
tests/: __init__.py  test_db.py  test_dependencies.py  test_models.py
tests/clients/: __init__.py  test_base.py  test_default.py  test_init.py  test_postgres.py  test_redis.py  test_sqlite.py  test_tinydb.py
tests/engines/: __init__.py  test_base.py  test_default.py  test_dependencies.py  test_init.py  test_postgres.py  test_redis.py  test_sqlite.py  test_tinydb.py
usage/: index.html
