[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "sthali-db"
version = "0.0.0.6"
authors = [{ name = "Jhunu Fernandes", email = "jhunu.fernandes@gmail.com" }]
description = "A FastAPI package dependency for SthaliCRUD perform DB queries"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi >= 0.111.0",
  "pydantic",
  "tinydb",
]

[project.optional-dependencies]
dev = [
  "coverage",
  "mkdocs",
  "pytest",
  "ruff >= 0.4.4",
]
tests = ["coverage", "pytest"]
stage = ["build", "coverage", "pytest"]

[project.urls]
"Homepage" = "https://github.com/jhunufernandes/sthali-db"
"Bug Tracker" = "https://github.com/jhunufernandes/sthali-db/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
omit = ["tests/*"]
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
]

# [tool.ruff.lint.pydocstyle]
# convention = "google"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"
