[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0",
]

[project]
name = "sthali-db"
version = "0.0.0.7"
authors = [{ name = "Jhunu Fernandes", email = "jhunu.fernandes@gmail.com" }]
description = "A FastAPI package dependency for SthaliCRUD perform DB queries"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Framework :: FastAPI",
  "Framework :: Pydantic",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "fastapi >= 0.111.1",
  "pydantic >= 2.8.2",
  "tinydb >= 4.8.0",
]

[project.optional-dependencies]
dev = [
  "coverage[toml] >= 7.6.1",
  "ruff >= 0.5.2",
]
tests = [
  "coverage[toml] >= 7.6.1",
]
stage = [
  "build >= 1.2.1",
  "coverage[toml] >= 7.6.1",
]

[project.urls]
"Homepage" = "https://github.com/jhunufernandes/sthali-db"
"Bug Tracker" = "https://github.com/jhunufernandes/sthali-db/issues"

[tool.coverage.run]
branch = true
command_line = "-m unittest discover -v"

[tool.coverage.report]
omit = [
  "tests/*",
]
show_missing = true
exclude_lines = [
    "def _",
]
[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",  # any-type
  "TID252",  # relative-imports
  # "ANN002",  # missing-type-args
  # "ANN003",  # missing-type-kwargs
  # "ANN101",  # missing-type-self
  # "ANN102",  # missing-type-cls
  # "COM812",  # missing-trailing-comma
  # "D107",  # undocumented-public-init
  # "ISC001",  # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"src/sthali_db/clients/tinydb.py" = [
  "PGH003",  # blanket-type-ignore
]
"tests/*" = [
  "COM812",  # missing-trailing-comma
  "D100",  # undocumented-public-module
  "D101",  # undocumented-public-class
  "D102",  # undocumented-public-method
  "D104",  # undocumented-public-package
  "D106",  # undocumented-public-nested-class
  "PGH003",  # blanket-type-ignore
  "PIE804",  # unnecessary-dict-kwargs
  "PT009",  # pytest-unittest-assertion
  "PT027",  # pytest-unittest-raises-assertion
  "S101",  # assert
]

[tool.ruff.lint.pydocstyle]
convention = "google"
